--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link type="text/css" rel="stylesheet" href="../css/main.css"/>
+  <link type="text/css" rel="stylesheet" href="main.css"/>
   <title>Pyramid Slide</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -47,7 +47,7 @@
             </small>
         </footer>
     </div>
-    <script src="../js/main.js"></script>
+    <script src="main.js"></script>
     <script>
         updateHeightLabel();
     </script>
