--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <script src="main.js"></script>
     <script>
-        updateHeightLabel();
+        determineHeightAndThenDrawPyramid();
     </script>
     </body>
 </html>
